[gd_scene load_steps=23 format=2]

[ext_resource path="res://Furniture/Assets/table.png" type="Texture" id=1]
[ext_resource path="res://Furniture/Assets/trash-can-front.png" type="Texture" id=2]
[ext_resource path="res://Furniture/Assets/trash-can-back.png" type="Texture" id=3]
[ext_resource path="res://SFX/yay.ogg" type="AudioStream" id=4]
[ext_resource path="res://Interactions/TrashMinigame/player-kick.png" type="Texture" id=5]
[ext_resource path="res://Interactions/TrashMinigame/arrow.png" type="Texture" id=6]
[ext_resource path="res://Interactions/TrashThrowing.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0.0444444, 1 )
colors = PoolColorArray( 0.217384, 0.217384, 0.217384, 1, 0.085022, 0.485271, 0.777344, 1 )

[sub_resource type="GradientTexture" id=11]
gradient = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 82.24
gravity = Vector3( 0, 0, 0 )
initial_velocity = 243.91
initial_velocity_random = 0.21
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 6.9
scale = 3.0
scale_random = 0.17
color_ramp = SubResource( 11 )
hue_variation = 0.62
hue_variation_random = 0.79

[sub_resource type="CapsuleShape2D" id=13]
radius = 3.09342
height = 27.1876

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 12.512, 4.95342 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 235.219, 10 )

[node name="TrashThrowing" type="Node2D"]
script = ExtResource( 7 )

[node name="Table" type="Sprite" parent="."]
scale = Vector2( 7.82321, 4.8596 )
texture = ExtResource( 1 )

[node name="CanBack" type="Sprite" parent="."]
position = Vector2( 74, -30 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( -133.274, -36.9492 )
scale = Vector2( 2, 2 )
frames = SubResource( 9 )

[node name="ArrowPivot" type="Position2D" parent="."]
position = Vector2( -114.059, -10.3009 )
rotation = -0.167087

[node name="Arrow" type="Sprite" parent="ArrowPivot"]
self_modulate = Color( 0, 1, 0.415686, 1 )
position = Vector2( 23.2838, -0.0806808 )
texture = ExtResource( 6 )

[node name="TrashSpawn" type="Node2D" parent="ArrowPivot"]

[node name="Can" type="Position2D" parent="."]
position = Vector2( 74, -30 )

[node name="CheerParticles" type="Particles2D" parent="Can"]
position = Vector2( -7.46442, 1.38529 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 0.59
randomness = 0.64
process_material = SubResource( 12 )

[node name="CanFront" type="StaticBody2D" parent="Can"]
collision_layer = 32
collision_mask = 32

[node name="trash-can-front" type="Sprite" parent="Can/CanFront"]
scale = Vector2( 2, 2 )
z_index = 4
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Can/CanFront"]
position = Vector2( -24.4998, 10.0226 )
shape = SubResource( 13 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Can/CanFront"]
position = Vector2( 7.57257, 10.9135 )
shape = SubResource( 13 )

[node name="Goal" type="Area2D" parent="Can"]
position = Vector2( -38.9501, -0.277061 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Can/Goal"]
position = Vector2( 30.5973, 19.4125 )
shape = SubResource( 14 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 105.591, -30.6259 )
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Floor"]
position = Vector2( -115.253, 39.5817 )
shape = SubResource( 15 )

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TrashNodes" type="Node2D" parent="."]

[node name="CelebrationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="CheerAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Can/Goal" to="." method="_on_Goal_body_entered"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="timeout" from="CelebrationTimer" to="." method="_on_CelebrationTimer_timeout"]
